Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9205

[PATCH] PAM user map plugin does not work with LDAP groups

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1.9
    • 10.1.11
    • Plugin - pam
    • None
    • 10.1.11

    Description

      Originally seem here: https://mariadb.com/comment/286#comment-286

      "Does not work with pam_ldap.so and group membership
      Try the fixed version here:
      github.com/raffis/mariadb-pam_user_map"

      The attached patch is a diff of this:

      https://github.com/MariaDB/server/blob/b0935fc5dafbd4a6c9adeeec4647a9616abf4b7b/plugin/auth_pam/mapper/pam_user_map.c

      And this:

      https://github.com/raffis/mariadb-pam_user_map/blob/ed93e0ad5bb469019b831c0a6ffa6189f1cf0d94/pam_user_map.c

      Attachments

        Activity

          People

            serg Sergei Golubchik
            GeoffMontee Geoff Montee (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 20m
                20m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.