plugin/auth_pam/mapper/pam_user_map.c
@@ -127,13 +127,13 @@ int pam_sm_authenticate(pam_handle_t *pamh, int flags,
       s++;
     }
     from= s;
-    skip(isalnum(*s) || (*s == '_'));
+    skip(isalnum(*s) || (*s == '_') || (*s == '.') || (*s == '-') || (*s == '$'));
     end_from= s;
     skip(isspace(*s));
     if (end_from == from || *s++ != ':') goto syntax_error;
     skip(isspace(*s));
     to= s;
-    skip(isalnum(*s) || (*s == '_'));
+    skip(isalnum(*s) || (*s == '_') || (*s == '.') || (*s == '-') || (*s == '$'));
     end_to= s;
     if (end_to == to) goto syntax_error;
 
